# simple-file-transfer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
inc/: CliParser.hpp  Client.hpp  FileHandler.hpp  Protocol.hpp  Server.hpp
src/: CliParser.cpp  Client.cpp  FileHandler.cpp  Protocol.cpp  Server.cpp
